# maxwell-3ds

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
assets/: shader.v.pica  whiskers.t3s
gfx/: body.t3s  maxwell.blend
scripts/: model_convert.py
src/: main.c  main.rs  maxwell.h  shader.v.pica
