[package]
name = "maxwell-3ds"
version = "0.1.0"
edition = "2021"

[build-dependencies]
wavefront_obj = "10"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
citro3d = { git = "https://github.com/rust3ds/citro3d-rs" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs" }

[profile.release]
opt-level = "z"
