cargo-features = ["profile-rustflags"]

[package]
name = "maxwell-3ds"
version = "0.1.0"
edition = "2021"
authors = ["spazzylemons"]
description = "Spinning Maxwell cat"

[[bin]]
name = "maxwell"
path = "src/main.rs"
test = false

[build-dependencies]
wavefront_obj = "10"

[dependencies]
ctru-rs = { git = "https://github.com/rust3ds/ctru-rs.git" }
ctru-sys = { git = "https://github.com/rust3ds/ctru-rs.git" }
citro3d = { git = "https://github.com/rust3ds/citro3d-rs" }
citro3d-sys = { git = "https://github.com/rust3ds/citro3d-rs" }
symphonia = { version = "0.5.2", default-features = false, features = ["ogg", "vorbis"] }

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"

[profile.release.package.compiler_builtins]
rustflags = ["-Zshare-generics=off"]
